Fixed alignment issue with about page, tweaked borders

--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,9 @@ body {
 .navbar {
     width: 95%;
     margin: 0 auto 3em auto;
-    border-radius: 0px 0px 15px 15px;
-    -webkit-border-radius: 0px 0px 15px 15px;
-    -moz-border-radius: 0px 0px 15px 15px;
+    border-radius: 0px 0px 8px 8px;
+    -webkit-border-radius: 0px 0px 8px 8px;
+    -moz-border-radius: 0px 0px 8px 8px;
     box-shadow: 0px 3px 3px #000000;
     -webkit-box-shadow: 0px 3px 3px #000000;
     -moz-box-shadow: 0px 3px 3px #000000;
@@ -69,7 +69,10 @@ body {
 /* ------------| FOOTER |----------- */
 footer {
     background-color: #f2f2f2;
+    background-image: url(../img/grayfelt.jpg);
+    background-repeat: repeat;
     padding: 25px;
+    border-top: 1px solid #999999;
 }
 
 /* -----------| CAROUSEL |----------- */
@@ -118,10 +121,10 @@ footer {
     background-image: url(../img/bluefabric.jpg);
     background-repeat: repeat;
     padding:20px;
-    -webkit-border-radius: 15px 15px 0px 0px;
-    -moz-border-radius: 15px 15px 0px 0px;
-    -o-border-radius: 15px 15px 0px 0px;
-    border-radius: 15px 15px 0px 0px;
+    -webkit-border-radius: 8px 8px 0px 0px;
+    -moz-border-radius: 8px 8px 0px 0px;
+    -o-border-radius: 8px 8px 0px 0px;
+    border-radius: 8px 8px 0px 0px;
     -webkit-box-shadow: 0px 3px 3px #000;
     -moz-box-shadow: 0px 3px 3px #000;
     -o-box-shadow: 0px 3px 3px #000;
